--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ img {
 :root {
     --bg-header: #ADDE87;
     --bg-hover: #512200;
-
+    --default-pad: 32px;
 }
 
 /* Utility Classes */
@@ -37,7 +37,7 @@ img {
 /* HEADER */
 header {
     min-height: 15svh;
-    padding-inline: 32px;
+    padding-inline: var(--default-pad);
 }
 
 header > img {
@@ -58,10 +58,10 @@ nav:focus-within {
 }
 
 .search-bar {
-    --size: clamp(2rem, 8vw + 0.5rem, 3rem);
+    --_size: clamp(2rem, 8vw + 0.5rem, 3rem);
 
-    width: var(--size);
-    height: var(--size);
+    width: var(--_size);
+    height: var(--_size);
     padding: 3px;
     border: 2px solid var(--bg-header);
     border-radius: 50px;
@@ -76,7 +76,7 @@ nav:focus-within {
 
     .search-input {
         opacity: 1;
-        width: calc(100% - var(--size));
+        width: calc(100% - var(--_size));
     }
 
     .search-submt {
@@ -86,10 +86,10 @@ nav:focus-within {
 
 .search-input {
     flex-grow: 1;
-    /* font-size: 1.5rem; */
+    font-size: clamp(1rem, 2vw + 0.5rem, 1.8rem);
     padding: 0 0.5em;
     border: 0;
-    line-height: calc(var(--size) - 3px); /* truque pra centralizar uma única linha de texto. necessário pois no firefox buga o tamanho do input se for só position */
+    line-height: calc(var(--_size) - 3px); /* truque pra centralizar uma única linha de texto. necessário pois no firefox buga o tamanho do input se for só position */
     opacity: 0;
     cursor: pointer;
     transition: opacity 300ms ease-in-out;
@@ -106,8 +106,8 @@ nav:focus-within {
 }
 
 .search-submt {
-    height: calc(var(--size) - 10px);
-    width: calc(var(--size) - 10px);
+    height: calc(var(--_size) - 10px);
+    width: calc(var(--_size) - 10px);
     margin-left: auto;
     cursor: pointer;
     border: 0;
@@ -132,7 +132,7 @@ nav:focus-within {
 }
 
 .hero-img {
-    width: clamp(250px, 70vw, 500px);
+    width: clamp(250px, 70vw + 0.5rem, 500px);
     z-index: 1;
     position: absolute;
     top: 50%;
@@ -178,14 +178,61 @@ nav:focus-within {
 }
 
 .inner-scroller > p {
-    font-size: clamp(2rem, 10vw, 4rem);
+    font-size: clamp(2rem, 8vw + 0.5rem, 4rem);
     font-weight: 900;
     color: var(--bg-header);
-    -webkit-text-stroke: 0.02em rgba(255, 255, 255, 0.3);
+    -webkit-text-stroke: 0.02em rgba(255, 255, 255, 0.2);
 }
 
 @keyframes scroll {
     to {
         transform: translateX(calc(-50% - 8px)); /*metade do gap pra compensar o deslocamento q ele causa*/
+    }
+}
+
+/* MAIN */
+.promo {
+    flex-wrap: wrap;
+    padding-block: 36px;
+    
+    position: relative;
+}
+
+.promo h3 {
+    font-size: clamp(1.3rem, 3vw + 0.5rem, 2rem);
+    padding-inline: var(--default-pad);
+}
+
+.promo  p {
+    font-size: clamp(1rem, 2vw + 0.5rem, 1.5rem);
+    padding-inline: var(--default-pad);
+}
+
+.promo::after {
+    content: "";
+    display: block;
+    height: 2px;
+    width: 100%;
+    margin-top: 36px;
+    background-color: #A5A1A1;
+}
+
+.products {
+    padding-inline: var(--default-pad);
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(30%, 150px));
+    justify-content: space-between;
+    gap: 32px 8px;
+}
+
+.card-img {
+    width: 100%;
+}
+
+/* RESPONSIVO */
+@media only screen and (max-width: 372px) {
+    .products {
+        grid-template-columns: repeat(auto-fill, 100%);
+        justify-content: center;
     }
 }
