--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ img {
     --bg-header: #ADDE87;
     --bg-hover: #512200;
     --default-pad: 32px;
+    --btn-color: #5CA720;
 }
 
 /* Utility Classes */
@@ -194,8 +195,6 @@ nav:focus-within {
 .promo {
     flex-wrap: wrap;
     padding-block: 36px;
-    
-    position: relative;
 }
 
 .promo h3 {
@@ -203,14 +202,13 @@ nav:focus-within {
     padding-inline: var(--default-pad);
 }
 
-.promo  p {
+.promo p {
     font-size: clamp(1rem, 2vw + 0.5rem, 1.5rem);
     padding-inline: var(--default-pad);
 }
 
 .promo::after {
     content: "";
-    display: block;
     height: 2px;
     width: 100%;
     margin-top: 36px;
@@ -225,8 +223,83 @@ nav:focus-within {
     gap: 32px 8px;
 }
 
+.card {
+    line-height: 1.65rem;
+}
+
+.wrapper {
+    position: relative;
+    overflow: hidden;
+}
+
 .card-img {
     width: 100%;
+}
+
+.wrapper> p {
+    font-size: clamp(0.8rem, 0.8vw + 0.5rem, 1.8rem);
+    color: white;
+    padding: 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    inset: 40% 0 0 0;
+    opacity: 0;
+    transform: translateY(100%);
+
+    background-color: rgba(92, 167, 32, 0.7);
+}
+
+.card-img, .wrapper> p {
+    transition: 500ms ease-in-out;
+}
+
+.wrapper:hover > p {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.wrapper:hover > .card-img {
+    transform: scale(1.1);
+    filter: blur(1px);
+}
+
+.card h4 {
+    font-size: clamp(1rem, 1.3vw + 0.5rem, 1.3rem);
+    margin-top: 8px;
+}
+
+.price {
+    font-size: clamp(0.6rem, 1vw + 0.5rem, 0.9rem);
+    font-weight: 700;
+}
+
+.price span {
+    font-size: clamp(0.9rem, 1.3vw + 0.5rem, 1.1rem);
+    color: var(--btn-color);
+    border-bottom: 1px solid var(--btn-color);
+}
+
+.card button {
+    font-size: clamp(1.1rem, 1.4vw + 0.5rem, 1.5rem);
+    font-family: inherit;
+    font-weight: 900;
+    color: white;
+    margin-top: 8px;
+    padding: 0.3em 1em;
+    border: none;
+    border-radius: 10px;
+    background-color: var(--btn-color);
+    box-shadow: 0 0 0.5em #220e0039;
+}
+
+.card button:hover {
+    background-color: var(--bg-hover);
+}
+
+.card button:active {
+    background-color: #7a3a0d;
 }
 
 /* RESPONSIVO */
