--- a/style.css
+++ b/style.css
@@ -215,16 +215,20 @@ nav:focus-within {
     background-color: #A5A1A1;
 }
 
-.products {
+.grid {
     padding-inline: var(--default-pad);
     display: grid;
+    grid-template-rows: min-content auto auto auto;
     grid-template-columns: repeat(auto-fill, minmax(30%, 150px));
     justify-content: space-between;
-    gap: 32px 8px;
+    gap: 0 8px;
 }
 
 .card {
     line-height: 1.65rem;
+    grid-row: span 4; /*necssário p/ q os elementos se relacionem corretamente com o grid-template-rows da .grid*/
+    display: grid;
+    grid-template-rows: subgrid;
 }
 
 .wrapper {
@@ -286,12 +290,15 @@ nav:focus-within {
     font-family: inherit;
     font-weight: 900;
     color: white;
-    margin-top: 8px;
+
+    margin: 8px 0 32px;
     padding: 0.3em 1em;
     border: none;
     border-radius: 10px;
+
+    justify-self: flex-start;
     background-color: var(--btn-color);
-    box-shadow: 0 0 0.5em #220e0039;
+    box-shadow: 0 0.4em 0.4em -0.1em #220e0039
 }
 
 .card button:hover {
@@ -304,7 +311,6 @@ nav:focus-within {
 
 /* FOOTER */
 footer {
-    min-height: 20vh; /*só pra ficar fácil de ver, retirar/arrumar depois*/
     padding: 16px var(--default-pad);
     margin-top: 24px;
     background-color: #F9F9F9;
@@ -337,12 +343,12 @@ label {
     font-weight: 700;
 }
 
-.mail-input, .submit-mail {
+#email, .submit-mail {
     font-size: clamp(1rem, 1.3vw + 0.5rem, 1.8rem);
     line-height: 2.5em;
 }
 
-.mail-input {
+#email {
     padding-left: 8px;
     border: 2px solid #D9D9D9;
 }
@@ -364,7 +370,7 @@ label {
 
 /* RESPONSIVO */
 @media only screen and (max-width: 372px) {
-    .products {
+    .grid {
         grid-template-columns: repeat(auto-fill, 100%);
         justify-content: center;
     }
@@ -378,7 +384,22 @@ label {
     }
 
     form {
-        flex-direction: row;
-        justify-content: space-evenly;
+        display: grid;
+        grid-template-rows: [news] min-content [email] 1fr [row-end];
+        grid-template-columns: [col1] 1fr [col2] 1fr [col3] 1fr [col-end];
+    }
+
+    label {
+        grid-row: news / email;
+    }
+
+    #email {
+        border-right: none;
+        grid-area: email / col1 / row-end / col3;
+    }
+
+    .submit-mail  {
+        border-radius: 0 5px 5px 0;
+        grid-area: email / col3 / row-end / col-end;
     }
 }
