--- a/style.css
+++ b/style.css
@@ -103,20 +103,29 @@ nav:focus-within {
 }
 
 .suggestions {
+    max-width: 30%;
+    font-size: clamp(1rem, 2vw + 0.5rem, 1.8rem);
+    border-radius: 10px;
+    background: var(--bg-header);
     position: absolute;
     top: 10%;
-    padding: 0 0.5em;
-    font-size: clamp(1rem, 2vw + 0.5rem, 1.8rem);
     z-index: 2;
-    background: var(--bg-header);
+
 }
 
 li {
     list-style-type: none;
+    cursor: pointer;
+    padding: 0 0.5em;
+}
+
+li:hover {
+    background-color: var(--btn-color);
 }
 
 .hl {
-    background-color: red;
+    color: white;
+    background-color: var(--bg-hover);
 }
 
 .search-input:focus {
