feat: cart is now functional

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap');
 
+/* RESETS */
 html {
     box-sizing: border-box;
 }
@@ -21,9 +22,14 @@ img {
     font-style: italic;
 }
 
+button {
+    font-family: inherit;
+}
+
 :root {
     --bg-header: #ADDE87;
     --bg-hover: #512200;
+    --btn-active: #7a3a0d;
     --default-pad: 32px;
     --btn-color: #5CA720;
     --gray: #A5A1A1;
@@ -55,7 +61,7 @@ nav img {
     width: clamp(1rem, 3vw + 0.5rem, 1.8rem);
 }
 
-nav:focus-within {
+nav:has(.search-bar:focus-within) {
     min-width: 60%;
 }
 
@@ -146,6 +152,136 @@ li:hover {
 
 .search-submt:active {
     box-shadow: 0 0 5px var(--bg-hover);
+}
+
+.cart-icon {
+    cursor: pointer;
+    background-color: transparent;
+    border: none;
+    position: relative;
+}
+
+.cart-icon span {
+    width: clamp(1rem, 1.8vw + 0.5rem, 1.5rem);
+    height: clamp(1rem, 1.8vw + 0.5rem, 1.5rem);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--btn-color);
+    border-radius: 50%;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+}
+
+.cart {
+    text-align: center;
+    height: 100svh;
+    width: 60vw;
+    max-width: 350px;
+    padding-top: 24px;
+    background-color: white;
+    display: grid;
+    grid-template-rows: min-content 1fr min-content;
+
+    position: fixed;
+    inset: 0 0 0 auto;
+    z-index: 3;
+    transform: translateX(100%);
+    transition: transform 800ms ease-in-out;
+}
+
+.show-cart {
+    transform: translate(0);
+}
+
+.cart h2 {
+    font-size: clamp(1.25rem, 2vw + 0.5rem, 1.8rem);
+}
+
+.cart-list {
+    overflow: auto;
+}
+
+.cart-list::-webkit-scrollbar {
+    width: 0;
+}
+
+.cart-item {
+    padding-top: 16px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    align-items: center;
+    gap: 8px;
+}
+
+.cart-list .cart-item:nth-child(even) {
+    background-color: whitesmoke;
+}
+
+.cart-item img {
+    display: none;
+}
+
+.quantity {
+    grid-column: 1 / -1;
+}
+
+.quantity span:nth-child(odd) {
+    cursor: pointer;
+    width: clamp(1rem, 1.3vw + 0.5rem, 1.5rem);
+    height: clamp(1rem, 1.3vw + 0.5rem, 1.5rem);
+    display: inline-block;
+    border-radius: 50%;
+    background-color: var(--bg-header);
+}
+
+.quantity span:nth-child(odd):hover {
+    background-color: var(--btn-color);
+}
+
+.quantity span:nth-child(odd):active {
+    background-color: var(--bg-hover);
+}
+
+.cart-btns {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.cart-btns > * {
+    cursor: pointer;
+    font-size: clamp(0.8rem, 2vw + 0.5rem, 1.8rem);
+    color: white;
+    padding: 0.5em;
+    border: none;
+
+}
+
+.close {
+    background-color: var(--bg-hover);
+}
+
+.close:hover {
+    background-color: var(--btn-active);
+}
+
+.close:active {
+    background-color: var(--bg-hover);
+}
+
+.checkout {
+    background-color: var(--btn-color);
+}
+
+.checkout:hover {
+    background-color: var(--bg-header);
+}
+
+.checkout:active {
+    background-color: var(--btn-color);
 }
 
 /* HERO SECTION */
@@ -306,9 +442,8 @@ li:hover {
     border-bottom: 1px solid var(--btn-color);
 }
 
-.card button {
+.buy {
     font-size: clamp(1.1rem, 1.4vw + 0.5rem, 1.5rem);
-    font-family: inherit;
     font-weight: 900;
     color: white;
 
@@ -322,12 +457,12 @@ li:hover {
     box-shadow: 0 0.4em 0.4em -0.1em #220e0039
 }
 
-.card button:hover {
+.buy:hover {
     background-color: var(--bg-hover);
 }
 
-.card button:active {
-    background-color: #7a3a0d;
+.buy:active {
+    background-color: var(--btn-active);
 }
 
 /* FOOTER */
@@ -441,6 +576,19 @@ label {
         display: flex;
         justify-content: space-between;
         align-items: center;
+    }
+
+    .cart-item {
+        grid-template-columns: 1fr 2fr 1fr 2fr;
+        grid-template-rows: unset;
+    }
+
+    .cart-item img {
+        display: block;
+    }
+
+    .quantity {
+        grid-column: 4 / -1;
     }
 
     form {
