--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ html {
 
 body {
     font-family: 'Lato', sans-serif;
+    color: var(--black);
 }
 
 img {
@@ -24,15 +25,22 @@ img {
 
 button {
     font-family: inherit;
+    color: var(--black);
 }
 
 :root {
     --bg-header: #ADDE87;
+    --btn-color: #5CA720;
     --bg-hover: #512200;
     --btn-active: #7a3a0d;
-    --default-pad: 32px;
-    --btn-color: #5CA720;
     --gray: #A5A1A1;
+    --black: #161616;
+    --white: #F9F9F9;
+
+    --default-space: 8px;
+    --space-x2: 16px;
+    --space-x3: 24px;
+    --space-x4: 32px;
 }
 
 /* Utility Classes */
@@ -42,10 +50,14 @@ button {
     align-items: center;
 }
 
+.grid {
+    display: grid;
+}
+
 /* HEADER */
 header {
     min-height: 15svh;
-    padding-inline: var(--default-pad);
+    padding-inline: var(--space-x4);
 }
 
 header > img {
@@ -92,9 +104,13 @@ nav:has(.search-bar:focus-within) {
     }
 }
 
+.search-input, .suggestions {
+    font-size: clamp(1rem, 2vw + 0.5rem, 1.8rem);
+    position: absolute;
+}
+
 .search-input {
     flex-grow: 1;
-    font-size: clamp(1rem, 2vw + 0.5rem, 1.8rem);
     padding: 0 0.5em;
     border: 0;
     line-height: calc(var(--_size) - 3px); /* truque pra centralizar uma única linha de texto. necessário pois no firefox buga o tamanho do input se for só position */
@@ -102,7 +118,6 @@ nav:has(.search-bar:focus-within) {
     cursor: pointer;
     transition: opacity 300ms ease-in-out;
 
-    position: absolute;
     top: 0;
     bottom: 0;
     left: 0;
@@ -110,13 +125,11 @@ nav:has(.search-bar:focus-within) {
 
 .suggestions {
     max-width: 30%;
-    font-size: clamp(1rem, 2vw + 0.5rem, 1.8rem);
     border-radius: 10px;
     background: var(--bg-header);
-    position: absolute;
+
     top: 10%;
     z-index: 2;
-
 }
 
 li {
@@ -130,7 +143,7 @@ li:hover {
 }
 
 .hl {
-    color: white;
+    color: var(--white);
     background-color: var(--bg-hover);
 }
 
@@ -139,13 +152,16 @@ li:hover {
     cursor: initial;
 }
 
+.search-submt, .cart-icon {
+    cursor: pointer;
+    border: 0;
+    background-color: transparent;
+}
+
 .search-submt {
     height: calc(var(--_size) - 10px);
     width: calc(var(--_size) - 10px);
     margin-left: auto;
-    cursor: pointer;
-    border: 0;
-    background-color: transparent;
     border-radius: 50%;
     transition: background 600ms ease-in-out 250ms;
 }
@@ -155,18 +171,13 @@ li:hover {
 }
 
 .cart-icon {
-    cursor: pointer;
-    background-color: transparent;
-    border: none;
     position: relative;
 }
 
 .cart-icon span {
     width: clamp(1rem, 1.8vw + 0.5rem, 1.5rem);
     height: clamp(1rem, 1.8vw + 0.5rem, 1.5rem);
-    display: flex;
     justify-content: center;
-    align-items: center;
     background-color: var(--btn-color);
     border-radius: 50%;
 
@@ -180,9 +191,8 @@ li:hover {
     height: 100svh;
     width: 60vw;
     max-width: 350px;
-    padding-top: 24px;
-    background-color: white;
-    display: grid;
+    padding-top: var(--space-x3);
+    background-color: var(--white);
     grid-template-rows: min-content 1fr min-content;
 
     position: fixed;
@@ -209,16 +219,15 @@ li:hover {
 }
 
 .cart-item {
-    padding-top: 16px;
-    display: grid;
+    padding-top: var(--space-x2);
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     align-items: center;
-    gap: 8px;
+    gap: var(--default-space);
 }
 
 .cart-list .cart-item:nth-child(even) {
-    background-color: whitesmoke;
+    background-color: rgb(236, 234, 234);
 }
 
 .cart-item img {
@@ -247,48 +256,39 @@ li:hover {
 }
 
 .cart-btns {
-    display: grid;
     grid-template-columns: 1fr 1fr;
 }
 
 .cart-btns > * {
     cursor: pointer;
     font-size: clamp(0.8rem, 2vw + 0.5rem, 1.8rem);
-    color: white;
+    color: var(--white);
     padding: 0.5em;
     border: none;
 
 }
 
-.close {
-    background-color: var(--bg-hover);
-}
 
 .close:hover {
     background-color: var(--btn-active);
 }
 
-.close:active {
+.close, .close:active {
     background-color: var(--bg-hover);
-}
-
-.checkout {
-    background-color: var(--btn-color);
 }
 
 .checkout:hover {
     background-color: var(--bg-header);
 }
 
-.checkout:active {
+.checkout, .checkout:active  {
     background-color: var(--btn-color);
 }
 
 /* HERO SECTION */
 .hero {
     min-height: 30svh;
-    padding-block: 8px;
-    display: grid;
+    padding-block: var(--default-space);
     grid-template-rows: repeat(4, 1fr);
     background-color: var(--bg-header);
 
@@ -302,7 +302,6 @@ li:hover {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-
 }
 
 .scroller {
@@ -313,23 +312,20 @@ li:hover {
 .scroller[data-animated=true] {
     overflow: hidden;
     -webkit-mask: linear-gradient(
-        90deg, transparent, white 5%,
-        white 95%, transparent);
+        90deg, transparent, var(--white) 5%,
+        var(--white) 95%, transparent);
 
     mask: linear-gradient(
-        90deg, transparent, white 5%,
-        white 95%, transparent);
+        90deg, transparent, var(--white) 5%,
+        var(--white) 95%, transparent);
 }
 
 .inner-scroller {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 16px;
+    gap: var(--space-x2);
 }
 
 .scroller[data-animated=true] .inner-scroller {
     width: max-content;
-    flex-wrap: nowrap;
     animation: scroll 35s var(--_animation-direction, forwards) linear infinite;
 }
 
@@ -350,42 +346,42 @@ li:hover {
 
 @keyframes scroll {
     to {
-        transform: translateX(calc(-50% - 8px)); /*metade do gap pra compensar o deslocamento q ele causa*/
+        transform: translateX(calc(-50% - var(--default-space))); /* metade do gap pra compensar o deslocamento q ele causa */
     }
 }
 
 /* MAIN */
 .promo {
     flex-wrap: wrap;
-    padding: 36px 0;
+    padding-block: 36px;
     border-bottom: 1px solid var(--gray);
 }
 
 .promo h3 {
     font-size: clamp(1.3rem, 3vw + 0.5rem, 2rem);
-    padding-inline: var(--default-pad);
 }
 
 .promo p {
     font-size: clamp(1rem, 2vw + 0.5rem, 1.5rem);
-    padding-inline: var(--default-pad);
 }
 
-.grid {
-    padding: 36px var(--default-pad) 0;
-    display: grid;
+.promo :where(h3, p) {
+    padding-inline: var(--space-x4);
+}
+
+.products {
+    padding: 36px var(--space-x4) 0;
     grid-template-rows: min-content auto auto auto;
     grid-template-columns: repeat(auto-fill, minmax(30%, 150px));
     justify-content: space-between;
-    gap: 0 8px;
+    column-gap:var(--default-space);
 }
 
 .card {
     line-height: 1.15rem;
-    grid-row: span 4; /*necssário p/ q os elementos se relacionem corretamente com o grid-template-rows da .grid*/
-    display: grid;
+    grid-row: span 4; /* necssário p/ q os elementos se relacionem corretamente com o grid-template-rows da .products */
     grid-template-rows: subgrid;
-    row-gap: 8px;
+    row-gap: var(--default-space);
 }
 
 .wrapper {
@@ -397,13 +393,11 @@ li:hover {
     width: 100%;
 }
 
-.wrapper> p {
+.wrapper > p {
     font-size: clamp(0.8rem, 0.8vw + 0.5rem, 1.8rem);
-    color: white;
-    padding: 16px;
-    display: flex;
+    color: var(--white);
+    padding: var(--space-x2);
     justify-content: center;
-    align-items: center;
     position: absolute;
     inset: 40% 0 0 0;
     opacity: 0;
@@ -412,7 +406,7 @@ li:hover {
     background-color: rgba(92, 167, 32, 0.7);
 }
 
-.card-img, .wrapper> p {
+.card-img, .wrapper > p {
     transition: 500ms ease-in-out;
 }
 
@@ -428,7 +422,7 @@ li:hover {
 
 .card h4 {
     font-size: clamp(1rem, 1.3vw + 0.5rem, 1.3rem);
-    margin-top: 8px;
+    margin-top: var(--default-space);
 }
 
 .price {
@@ -445,9 +439,9 @@ li:hover {
 .buy {
     font-size: clamp(1.1rem, 1.4vw + 0.5rem, 1.5rem);
     font-weight: 900;
-    color: white;
+    color: var(--white);
 
-    margin: 8px 0 32px;
+    margin: var(--default-space) 0 var(--space-x4);
     padding: 0.3em 1em;
     border: none;
     border-radius: 10px;
@@ -467,14 +461,14 @@ li:hover {
 
 /* FOOTER */
 footer {
-    padding-top: 16px;
-    margin-top: 24px;
+    padding-top: var(--space-x2);
+    margin-top: var(--space-x3);
     background-color: #F9F9F9;
     border-top: 1px solid var(--gray);
 }
 
 .infos {
-    padding-inline: var(--default-pad);
+    padding-inline: var(--space-x4);
 }
 
 .contacts {
@@ -484,9 +478,9 @@ footer {
 
 .contacts a {
     font-size: clamp(1rem, 1vw + 0.5rem, 1.5rem);
-    color: black;
+    color: var(--black);
     text-decoration: none;
-    margin-bottom: 16px;
+    margin-bottom: var(--space-x2);
 }
 
 .contacts a:hover {
@@ -495,13 +489,13 @@ footer {
 }
 
 form {
-    margin: 32px 0;
+    margin: var(--space-x4) 0;
     display: flex;
     flex-direction: column;
 }
 
 form > * {
-    margin-bottom: 16px;
+    margin-bottom: var(--space-x2);
 }
 
 label {
@@ -515,12 +509,12 @@ label {
 }
 
 #email {
-    padding-left: 8px;
+    padding-left: var(--default-space);
     border: 2px solid #D9D9D9;
 }
 
 .submit-mail {
-    color: white;
+    color: var(--white);
     background-color: var(--btn-color);
     border: none;   
     border-radius: 5px;
@@ -531,13 +525,11 @@ label {
 }
 
 .submit-mail:active {
-    background-color: #7a3a0d;
+    background-color: var(--btn-active);
 }
 
 .social-pay {
-    display: flex;
-    justify-content: space-between;
-    padding: 24px var(--default-pad);
+    padding: var(--space-x3) var(--space-x4);
     border-top: 1px solid var(--gray);
 }
 
@@ -546,16 +538,16 @@ label {
 }
 
 .social a:first-child {
-    margin-right: 16px;
+    margin-right: var(--space-x2);
 }
 
 .payment img:nth-child(2) {
-    margin-inline: 16px;
+    margin-inline: var(--space-x2);
 }
 
 /* RESPONSIVO */
 @media only screen and (max-width: 372px) {
-    .grid {
+    .products {
         grid-template-columns: repeat(auto-fill, 100%);
         justify-content: center;
     }
