--- a/style.css
+++ b/style.css
@@ -484,7 +484,7 @@ li:hover {
     transform: translateX(0);
 }
 
-.checkout-msg {
+.checkout-box {
     height: 100vh;
     width: 100vw;
     display: flex;
@@ -497,12 +497,30 @@ li:hover {
     z-index: 4;
 }
 
-.checkout-msg p {
+.checkout-box div {
     line-height: 1.8rem;
     width: 250px;
     height: 250px;
     padding: var(--space-x2);
     background-color: var(--bg-header);
+}
+
+.checkout-box button {
+    width: 100%;
+    height: 50px;
+    cursor: pointer;
+    font-size: var(--space-x3);
+    color: var(--white);
+    border: none;
+    background-color: var(--bg-hover);
+}
+
+.checkout-box button:hover {
+    background-color: var(--btn-active);
+}
+
+.checkout-box button:active {
+    background-color: var(--bg-hover);
 }
 
 /* FOOTER */
