--- a/style.css
+++ b/style.css
@@ -364,7 +364,7 @@ li:hover {
 .cart {
     text-align: center;
     height: 100vh;
-    width: 60vw;
+    width: 60dvw;
     max-width: 350px;
     padding-top: var(--space-x3);
     background-color: var(--white);
